--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,28 +1,10 @@
-/* .home-container { */
-/* background-color: black; */
-/* background-image: url('../assets/cover.jpg');
-    background-repeat: no-repeat;
-    background-position: 0% 50%;
-    background-attachment: fixed;
-    background-size: cover; */
-/* filter: grayscale(100%);
-    -webkit-filter: grayscale(100%); */
-/* Safari 6.0 - 9.0 */
-/* border: 1px solid rgb(255, 0, 17); */
-/* } */
-
 .home {
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(33,124,148,1) 100%);
-    /* margin: 100px; */
     width: 100%;
     height: 100vh;
-    /* height: 100%; */
-    /* height: auto; */
-    /* height: calc(100vh - 100px); */
     position: relative;
     animation: fadeBackground 2s;
-    /* border: 1px solid rgb(0, 255, 8); */
 }
 
 @keyframes fadeBackground {
@@ -36,70 +18,47 @@
 }
 
 .tags {
-    /* color: rgb(245, 156, 156); */
     color: #f46213;
-    /* text-shadow: 2px 2px 4px rgb(255, 255, 255); */
     font-size: 20px;
     font-family: 'La Belle Aurore';
     position: absolute;
-    /* border: 1px solid red; */
 }
 
 .top-tags {
     top: 35px;
-    left: 120px;
-    /* border: 1px solid rgb(93, 0, 255);     */
+    left: 75px;
 }
 
 .bottom-tags {
     bottom: 0;
-    left: 120px;
+    left: 75px;
 }
 
 .bottom-tag-html {
     margin-left: -30px;
-    /* border: 1px solid rgb(72, 0, 255); */
 }
-
 
 .home-links {
     position: absolute;
     top: 75px;
     right: 75px;
     bottom: 75px;
-    /* left: 100px; */
-    margin-left: 85px;
-    width: 60%;
-    /* height: auto; */
+    left: 75px;
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: right;
-    /* margin: auto; */
     border: 10px inset rgb(255, 213, 0);
-    /* opacity: 0.9; */
     font-weight: 800;
     font-size: 80px;
     background-color: white;
-    animation: mymove 5s linear;
-    /* animation-timing-function: linear; */
     padding-right: 10px;
     background-image: url('../assets/cover.jpg');
     background-repeat: no-repeat;
-    /* background-position: 0% 40%; */
-    background-position: -350px 50%;
+    background-position: -300px 50%;
     background-attachment: fixed;
     background-size: cover;
-}
-
-@keyframes mymove {
-    from {
-        right: 0%;
-    }
-
-    to {
-        right: 30%;
-    }
 }
 
 .home-links>a:link {
@@ -114,7 +73,6 @@
 
 .link-about:hover:after {
     content: "About";
-    /* border: 1px solid red; */
     margin-right: 50px;
     opacity: 0.5;
 }
@@ -127,7 +85,6 @@
 
 .link-projects:hover:after {
     content: "Projects";
-    /* border: 1px solid red; */
     margin-right: 50px;
     opacity: 0.5;
 }
@@ -140,18 +97,52 @@
 
 .link-experience:hover:after {
     content: "Experience";
-    /* border: 1px solid red; */
     margin-right: 50px;
     opacity: 0.5;
+}
+
+@media screen and (max-width: 991px) {
+
+    .home-links {
+        background-position: -150px 50%;
+        font-size: 60px;
+    }   
+}
+
+@media screen and (max-width: 767px) {
+
+    .home-links {
+        background-position: -100px 50%;
+        font-size: 40px;
+        right: 50px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+
+    .home-links {
+        font-size: 35px;
+    }
+
 }
 
 @media screen and (max-width: 390px) {
 
     .home-links {
-
-        font-weight: 800;
-        font-size: 35px;
-        animation: mymove 3s linear;
+        font-size: 30px;
+        right: 30px;
+        left: 30px;
     }
 
+    .top-tags {
+        left: 30px;
+    }
+    
+    .bottom-tags {
+        left: 30px;
+    }
+    
+    .bottom-tag-html {
+        margin-left: -25px;
+    }   
 }
