--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,24 +1,20 @@
 .navbar {
     width: 100%;
-    height: 100px;
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(33,124,148,1) 100%);
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(33, 124, 148, 1) 100%);
 }
 
 .links {
-    /* width: 100%; */
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* color: white; */
 }
 
-.links > a:hover {
+.links>a:hover {
     color: rgb(255, 225, 0);
     opacity: 0.5;
     text-decoration-line: underline;
-  }
+}
 
 .navbar a {
     color: white;
@@ -28,7 +24,6 @@
 }
 
 .toggleButton {
-    /* width: 100%; */
     height: 100px;
     display: flex;
     align-items: center;
@@ -48,14 +43,11 @@
 }
 
 #open {
-    /* height: 100vh; */
     height: auto;
 }
 
 #open .links {
     flex-direction: column;
-    /* justify-content: flex-start; */
-    /* margin-top: 100px; */
 }
 
 #open a {
@@ -63,13 +55,7 @@
     text-align: center;
 }
 
-@media only screen and (max-width: 900px) {
-    .navbar a {
-        width: 70px;
-    }
-}
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 575px) {
     .toggleButton {
         display: none;
     }
@@ -83,12 +69,16 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 575px) {
     .toggleButton {
         display: flex;
     }
 
     #close a {
         display: none;
+    }
+
+    .navbar a {
+        font-size: 20px;
     }
 }
