--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,8 +1,5 @@
 .projects {
     width: 100%;
-    /* height: 100%; */
-    /* height: auto; */
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,7 +7,7 @@
 }
 
 .projects h1 {
-    color: rgb(255, 200, 0);
+    color: rgb(255, 225, 0);
     font-size: 50px;
     width: 100%;
     margin: auto;
@@ -19,7 +16,6 @@
     background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(33, 124, 148, 1) 100%);
     text-align: center;
 }
-
 
 .projects h1:before {
     content: "<h1>";
@@ -85,14 +81,11 @@
 }
 
 .projectList {
-    width: 70vw;
+    width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
-    /* display: flex;
-    flex-wrap: wrap; */
-    /* justify-content: center; */
 }
 
 .projectItem {
@@ -115,8 +108,6 @@
 }
 
 .projectItem .bgImage {
-    /* border-top-left-radius: 15px;
-    border-top-right-radius: 15px; */
     width: 100%;
     height: 200px;
     background-position: center;
@@ -128,22 +119,34 @@
     font-size: 25px;
 }
 
-/* @media only screen and (max-width: 1300px) {
-    .projectList {
-        grid-template-columns: 1fr 1fr;
-    }
-} */
-
 @media only screen and (max-width: 800px) {
     .projectList {
         grid-template-columns: 1fr;
         display: flex;
         flex-direction: column;
     }
-}
 
-@media only screen and (max-width: 360px) {
     .projects h1 {
         font-size: 40px;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .projects h1 {
+        font-size: 25px;
+    }
+
+    .projectItem h2 {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .projects h1 {
+        font-size: 20px;
+    }
+
+    .projectItem h2 {
+        font-size: 15px;
     }
 }
